--- a/fiction/index.html
+++ b/fiction/index.html
@@ -56,7 +56,9 @@
 		<section id = "movies" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>In Fiction</h2></center>
+					<div class="page-header">
+				        <h2>In Fiction</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<ul>
 							<li>Knight Rider</li>
