--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 		<section id = "netcomm" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Networked Communications</h2></center>
+					<div class="page-header">
+				        <h2>Networked Communication</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>Autonomous vehicles today work on various networks.  Two different types of network communication exist and are viable options for the future.  One option is vehicle to infrastructure communication in which the autonomous cars are talking with a an overarching infrastructure that relays commands and necessary data to the cars.  The other communication system is vehicle to vehicle.  With this idea, cars hold most of the information that they already need, and what they are missing they collect through communication with other autonomous vehicles. [1] There is the possibility of some combination of the two as well, though most self driving cars today use vehicle to infrastructure.  Machine learning offers the cars to be able to learn from each other.  This would be the optimization of vehicle to vehicle communication because as one car learns valuable information, it can relay such data to other cars.  The autonomous cars essentially would be able to teach themselves everything necessary to be as efficient as possible, once established with its needed base information.</p>
 						<ul>
@@ -77,7 +79,9 @@
 		<section id = "ip" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Intellectual Property</h2></center>
+					<div class="page-header">
+				        <h2>Intellectual Property</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>Intellectual Property is an interesting topic for this technology. On one hand, all of the algorithms and software used in the cars will be trade secrets proprietary to the company that develops them. On the other hand, most of the hardware that is fit on the car is patented.</p>
 					</div>
@@ -88,7 +92,9 @@
 		<section id = "privacy" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Privacy</h2></center>
+					<div class="page-header">
+				        <h2>Privacy</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>There is a huge concern with the privacy of autonomous cars.  Autonomous cars offer access to very personal data of the individuals owning the cars.  A study proved that a person can be identified through the tracking of their GPS location.  By evaluating factors such as parking location, duration of stay, travel and visiting patterns, and the environment personal identifiers were discovered about the drivers.  Personal identifiers included name, home address, type of member of the college studied, and favorite locations. [1]  As of today, most autonomous cars use GPS for navigation and therefore pose the risk of releasing this kind of information to people with malicious intents, or just major companies looking to advertise and market their product.  It was noted that unless a car is completely removed from communicating with other networks, they can not only track where you have been but can “also (track) ‘his or her future travel plans,’ which could be employed for ‘targeted marketing,’ ‘law enforcement,’ or ‘surveillance.”’ [2] The government is another body that might seek to use the information given by the car.  As mentioned, the government might find information offered by autonomous cars useful in monitoring and tracking individuals deemed necessary.  This situation can probably be compared to wiretapping and the actions that the NSA has conducted.</p> 
 						<p>Machine learning offers the opportunity for your car to offer you a deal at your favorite coffee shop on your way to work.  It also stops at the dry cleaner on the way back knowing you have clothes to pick up.  As you give inputs, your car can develop patterns and make appropriate accommodations based on the information you allow it to have.  However, there is the risk that you have no control over the car making these decisions based on what you give it.  [3] </p>
@@ -112,7 +118,9 @@
 		<section id = "security" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Security</h2></center>
+					<div class="page-header">
+				        <h2>Security</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>Just like for any computing system, there is a concern for the security.  Autonomous cars are no exception.  There are numerous ways an autonomous car can be compromised and pose a threat.  The most extreme case includes complete control of a car seized by a hacker.  Autonomous cars can also be fed wrong maps, cause wrong calculations likely to lead to accidents.  The car's sensors can be taken offline also leading to the possibility of an accident. [4]  Someone with the means to hack an autonomous car are also numerous.  Hackers can manually install a virus if they have access inside a car.  More common methods include using the network on which the cars operate, however even other autonomous cars can act as a transmitter of a virus.</p>
 						<p>There are companies working on solving the possibility of cyber attacks.  Karamba is working on solving hardened telematics and in memory attacks.  In response to dropping in malicious code, “when building binary files that ultimately get loaded into the ECU, the scripts include calls to the Karamba system to automatically include some of that company’s code. Karamba generates hashes (an encrypted alphanumeric string that uniquely represents the contents of a file) of all the factory binary files which are included. If someone tries to reprogram an ECU with a binary that doesn’t match the hash, it will be rejected.”  “Since the in-vehicle electronics should never be running random unknown programs like a computer or smartphone, Karamba has taken a deterministic approach. During the software build, they analyze and map every possible instruction control flow. In the vehicle, any instruction call that doesn’t match the flow map immediately gets discarded, an approach that should not result in any false positives.” [5]</p>
@@ -130,7 +138,9 @@
 		<section id = "reliability" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Reliability</h2></center>
+					<div class="page-header">
+				        <h2>Reliability</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>Autonomous cars adoption depends highly upon their reliability.  Within the last 5 years, self driving cars have made huge leaps in gaining reliability.  They were initially run through simulations.  Once they gained reliability in simulations, self driving cars hit the road.  While they seemed to operate mostly as planned, testing in the real world revealed the many flaws of human drivers. [17] Autonomous cars were altered to adjust to human errors as best a they could.  Fewer and fewer mistakes arose as machine learning was able to adapt to human behavior.  Autonomous cars today drive hundreds of thousands of miles without mistakes, gaining  confidence in their reliability.  Mistakes made by autonomous cars seem to be very peculiar edge cases, but never the less add to increased reliability. [7]  The future reliability of autonomous cars will be based on the capabilities of machine learning to find human and machine error and make appropriate changes to the cars driving behavior.</p>
 						<ul>
@@ -148,7 +158,9 @@
 		<section id = "ethics" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Professional Ethics</h2></center>
+					<div class="page-header">
+				        <h2>Professional Ethics</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>Autonomous cars bring to debate one troubling moral question.  In the instance of a car malfunction, what will the car decide to do?  Based on the responding action, who can be/is held responsible.  You can watch the youtube video for a visual clarification.  The questions raised by many include “Should the car swerve to miss one person, even if they will plow into many people? Should the safety of the passengers or a pedestrian be prioritized? What if there are four people in the car, should they swerve into a tree to miss one pedestrian? Often such questions are framed in a way similar to the classic trolley set of ethical problems.” [9]  It is not a clear answer, but many would like to think that the answer in minimizing damage. [8] However, others think that machine learning will calculate the best ethical decision based on what humans think; save one innocent person compared to killing two known mass murderers.  The trouble is not every situation will be as “clear cut.”  In this regard, machine learning has quite the problem ahead of it.</p>
 						<ul>
@@ -168,7 +180,9 @@
 		<section id = "workwealth" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Work and Wealth</h2></center>
+					<div class="page-header">
+				        <h2>Work and Wealth</h2>
+				    </div>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>The major application of self driving cars is apparent.  However, the side effects of a mass adoption of self driving cars might not be so obvious.  Self driving cars offer competition and replacement to taxi drivers.  They will give taxi companies a solution to having to pay hourly wages for drivers.  Companies like Uber, who already challenge taxi business, are investing heavily in autonomous vehicle development.  Autonomous cars also pose a threat to insurance companies.  An annual report by Allstate suggest that with the implementation of self driving cars, Allstate, and presumably other insurance companies, will be ruined due to the reliability of the cars and therefore a lack of accidents driving insurance business. [10]</p>
 						<ul>
