--- a/minutes/index.html
+++ b/minutes/index.html
@@ -55,7 +55,9 @@
 			<div class = "container">
 				<div class = "row">
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<h2>Meeting Minutes</h2>
+						<div class="page-header">
+					        <h2>Meeting Minutes</h2>
+					    </div>
 						<ul>
 							<li>September 21st, 2016</li>
 							<ul>
