--- a/references/index.html
+++ b/references/index.html
@@ -51,6 +51,21 @@
 			</div>
 		</section>
 
+		<section>
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<div class="page-header">
+					        <h2>References</h2>
+					    </div>
+						<ul>
+							<li>Hi</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="../css/styles.css" rel="stylesheet">
